--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Space+Grotesk:wght@300..700&display=swap");
+
 @import "tailwindcss";
 
 /* ................ */
@@ -70,3 +72,22 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+@theme {
+  /* font */
+
+  /* value from 300 to 700 */
+  --font-space: "Space Grotesk", sans-serif;
+
+  /* value from 200 to 800 */
+  --font-manrope: "Manrope", sans-serif;
+
+  /* colors */
+  --color-blackish: #0d0d0d;
+
+  /* neutral color */
+  --color-white: #ffffff;
+
+  /* brand color */
+  --color-brandColor: #00c853;
+}
